bin_PROGRAMS = asgard
asgard_SOURCES =			\
CircHardpoint.cpp       \
Container.cpp		      \
Coordinate.cpp		      \
Database.cpp		      \
DesertTile.cpp		      \
GameEngine.cpp		      \
GrassTile.cpp 		      \
Item.cpp 		         \
MapObject.cpp           \
MapObjectFactory.cpp    \
NonPlayerCharacter.cpp  \
QueryGenerator.cpp	   \
RectHardpoint.cpp 	   \
StaticMapObject.cpp 	   \
WaterTile.cpp 		      \
main.cpp

noinst_HEADERS = 			\
CircHardpoint.h 	      \
Container.h 		      \
Coordinate.h 		      \
Database.h              \
DatabaseColumnMap.h     \
DesertTile.h            \
GameEngine.h            \
GrassTile.h             \
Hardpoint.h             \
Item.h                  \
MapObject.h             \
MapObjectFactory.h      \
MapObjectType.h			\
NonPlayerCharacter.h    \
QueryGenerator.h        \
RectHardpoint.h         \
StaticMapObject.h       \
Tile.h                  \
TileType.h              \
WaterTile.h
